Applying the latest yml valueset format mapping